Credits button hides all buttons

--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -216,6 +216,9 @@ CanvasPanel.Performance=True
 CanvasPanel.Clipping=True
 CanvasPanel.Navigation=True
 CanvasPanel.Localization=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
