GUI is visible in the level
GUI is visible in the level

--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -138,6 +138,8 @@ LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/GUI/MainMenu/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -219,6 +221,15 @@ CanvasPanel.Localization=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableGet.Events=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Actor=True
+MainMenu_C.Input=True
+MainMenu_C.HLOD=True
+MainMenu_C.WorldPartition=True
+MainMenu_C.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1165,11 +1176,13 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GUI/GUI
-MRUItem1=/Game/GUI/idkFontIG
-MRUItem2=/Game/Levels/MainMenu
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/GUI/GUI
+MRUItem2=/Game/GUI/idkFontIG
 MRUItem3=/Game/InGameScreen
 MRUItem4=/Game/MyGameModeBase
 MRUItem5=/Game/StartScreen
