Controls list implemented
Controls button brings up list of controls and button to return back to menu

--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -277,6 +277,9 @@ Minimal_Default_C.Input=True
 Minimal_Default_C.HLOD=True
 Minimal_Default_C.WorldPartition=True
 Minimal_Default_C.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
