--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ MRUItem3=/Game/InGameScreen
 MRUItem4=/Game/StartScreen
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1265,8 +1265,8 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/GUI/MainMenu/MainMenu
+MRUItem0=/Game/GUI/MainMenu/MainMenu
+MRUItem1=/Game/Levels/MainMenu
 MRUItem2=/Game/GUI/GUI
 MRUItem3=/Game/GUI/idkFontIG
 MRUItem4=/Game/InGameScreen
@@ -1338,11 +1338,11 @@ Advanced=False
 
 [DetailPropertyExpansion]
 Font="\"Object.Font\" "
-Object=
+Object="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
+Visual="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
 
 [UMGEditor.Designer]
 PreviewWidth=1280
