--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -138,7 +138,7 @@ MRUItem5=/Game/StartScreen
 LastLevel=/Game/Levels/TestingPauseMenuLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Levels/TestingPauseMenuLevel.TestingPauseMenuLevel:PersistentLevel.TestingPauseMenuLevel
 OpenAssetsAtExit=/Game/GUI/Menus/PauseMenu.PauseMenu
 OpenAssetsAtExit=/Game/GUI/Menus/MainMenu.MainMenu
@@ -1296,7 +1296,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/GUI/MainMenu
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1371,6 +1371,7 @@ GraphEditorQuickJumps=()
 /Game/Levels/TestingPauseMenuLevel.TestingPauseMenuLevel:PersistentLevel.TestingPauseMenuLevel=1
 /Game/Levels/InGameScreen.InGameScreen:PersistentLevel.InGameScreen=1
 /Game/GUI/Menus/MainMenu.MainMenu=1
+/Game/GUI/Menus/PauseMenu.PauseMenu=1
 
 [WidgetTemplatesExpanded]
 Editor=False
