--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,7 +136,9 @@ MRUItem3=/Game/StarterContent/Maps/Minimal_Default
 LastLevel=/Game/Levels/InGameScreen
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter
+OpenAssetsAtExit=/Game/InGame/B_PlayerBullet.B_PlayerBullet
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -567,6 +569,24 @@ DirectionalLight.TransformCommon=True
 K2Node_InputAction.Input=True
 GameplayTagsSettings.Advanced Gameplay Tags=True
 AssetManagerSettings.Asset Registry=True
+B_PlayerCharacter_C.TransformCommon=True
+B_PlayerBullet_C.Tick=True
+B_PlayerBullet_C.Replication=True
+B_PlayerBullet_C.Rendering=True
+B_PlayerBullet_C.Collision=True
+B_PlayerBullet_C.Actor=True
+B_PlayerBullet_C.Input=True
+B_PlayerBullet_C.HLOD=True
+B_PlayerBullet_C.WorldPartition=True
+B_PlayerBullet_C.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+B_PlayerBullet_C.TransformCommon=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1631,7 +1651,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/InGame
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1640,13 +1660,14 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/InGameScreen
+MRUItem0=/Game/InGame/B_PlayerBullet
 MRUItem1=/Game/InGame/B_PlayerCharacter
-MRUItem2=/Game/InGame/MyPlayerController
-MRUItem3=/Game/InGameScreen
-MRUItem4=/Game/MyGameModeBase
-MRUItem5=/Game/StartScreen
-MRUItem6=/Game/MyPlayerController
+MRUItem2=/Game/Levels/InGameScreen
+MRUItem3=/Game/InGame/MyPlayerController
+MRUItem4=/Game/InGameScreen
+MRUItem5=/Game/MyGameModeBase
+MRUItem6=/Game/StartScreen
+MRUItem7=/Game/MyPlayerController
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1686,7 +1707,7 @@ bShowParentClassInOverrides=True
 bShowEmptySections=True
 bShowAccessSpecifier=False
 Bookmarks=()
-PerBlueprintSettings=()
+PerBlueprintSettings=(("/Game/InGame/B_PlayerCharacter.B_PlayerCharacter", (WatchedPins=((OwningNode="/Game/InGame/B_PlayerCharacter.B_PlayerCharacter:EventGraph.K2Node_VariableGet_2",PinId=905DC8FC42FD3DC03B123F91CC3E21B3)))))
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
@@ -1696,6 +1717,7 @@ GraphEditorQuickJumps=()
 /Game/InGame/MyPlayerController.MyPlayerController=1
 /Game/InGame/B_PlayerCharacter.B_PlayerCharacter=1
 /Game/Levels/InGameScreen.InGameScreen:PersistentLevel.InGameScreen=1
+/Game/InGame/B_PlayerBullet.B_PlayerBullet=1
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1803,8 +1825,8 @@ ModelingComponentsSettings="\"Object\" \"Object.Modeling Tools.Modeling Tools|Re
 NiagaraSettings="\"Object\" \"Object.Niagara.AdditionalParameterEnums\" \"Object.Renderer.ComponentRendererWarningsPerClass\" "
 NiagaraEditorSettings="\"Object\" \"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14].Input\" \"Object.Niagara.CurveTemplates\" \"Object.Niagara.CurveTemplates.CurveTemplates[0]\" \"Object.Niagara.CurveTemplates.CurveTemplates[1]\" \"Object.Niagara.CurveTemplates.CurveTemplates[2]\" \"Object.Niagara.CurveTemplates.CurveTemplates[3]\" \"Object.Niagara.CurveTemplates.CurveTemplates[4]\" \"Object.Niagara.CurveTemplates.CurveTemplates[5]\" \"Object.Niagara.CurveTemplates.CurveTemplates[6]\" \"Object.Niagara.CurveTemplates.CurveTemplates[7]\" \"Object.Niagara Colors.ActionColors\" "
 LinuxTargetSettings="\"Object\" \"Object.Audio.Audio|CookOverrides\" "
-WorldSettings=
-Info=
+WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 K2Node_InputAxisEvent="\"Object\" "
@@ -1880,6 +1902,8 @@ TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 K2Node_InputAction="\"Object\" "
+CameraComponent="\"Object\" "
+CapsuleComponent="\"Object\" "
 
 [DetailCategoriesAdvanced]
 B_PlayerCharacter_C.Replication=False
