Weird issues with files

--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -138,10 +138,10 @@ MRUItem5=/Game/StartScreen
 LastLevel=/Game/Levels/TestingPauseMenuLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Levels/TestingPauseMenuLevel.TestingPauseMenuLevel:PersistentLevel.TestingPauseMenuLevel
+CleanShutdown=False
 OpenAssetsAtExit=/Game/GUI/Menus/PauseMenu.PauseMenu
 OpenAssetsAtExit=/Game/GUI/Menus/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Levels/TestingPauseMenuLevel.TestingPauseMenuLevel:PersistentLevel.TestingPauseMenuLevel
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -1305,10 +1305,10 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/TestingPauseMenuLevel
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/GUI/Menus/MainMenu
-MRUItem3=/Game/GUI/Menus/PauseMenu
+MRUItem0=/Game/GUI/Menus/MainMenu
+MRUItem1=/Game/GUI/Menus/PauseMenu
+MRUItem2=/Game/Levels/TestingPauseMenuLevel
+MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/InGameScreen
 MRUItem5=/Game/GUI/MainMenu/PauseMenu
 MRUItem6=/Game/GUI/MainMenu/MainMenu
@@ -1462,4 +1462,18 @@ DisplayActorsCount=False
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
