--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -137,8 +137,9 @@ LastLevel=/Game/Levels/InGameScreen
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter
+OpenAssetsAtExit=/Game/GUI/MainMenu/MainMenu.MainMenu
 OpenAssetsAtExit=/Game/InGame/B_PlayerBullet.B_PlayerBullet
+OpenAssetsAtExit=/Game/InGame/B_Room.B_Room
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -587,6 +588,65 @@ K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 B_PlayerBullet_C.TransformCommon=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+WrapBox.Layout=True
+WrapBox.Content Layout=True
+WrapBox.Accessibility=True
+WrapBox.Behavior=True
+WrapBox.Render Transform=True
+WrapBox.Performance=True
+WrapBox.Clipping=True
+WrapBox.Navigation=True
+WrapBox.Localization=True
+BlockingVolume.TransformCommon=True
+BlockingVolume.HLOD=True
+BlockingVolume.Collision=True
+BlockingVolume.Navigation=True
+BlockingVolume.BrushSettings=True
+BlockingVolume.Tags=True
+BlockingVolume.Cooking=True
+BlockingVolume.Replication=True
+BlockingVolume.WorldPartition=True
+BlockingVolume.Actor=True
+B_PlayerBullet_C.Default=True
+B_Room_C.Tick=True
+B_Room_C.Replication=True
+B_Room_C.Rendering=True
+B_Room_C.Collision=True
+B_Room_C.Actor=True
+B_Room_C.Input=True
+B_Room_C.HLOD=True
+B_Room_C.WorldPartition=True
+B_Room_C.Events=True
+B_Room_C.TransformCommon=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1513,6 +1573,8 @@ Voice.TimeStamp=2022.08.24-11.31.57
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2022.08.24-11.31.54
 MovieSceneCapture.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2022.08.24-11.31.55
+SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1601,6 +1663,8 @@ TcpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 TemplateSequenceEditorSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
+BlockingVolume=BlockingVolume.Collision.Collision,
+BrushComponent=
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1660,14 +1724,16 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InGame/B_PlayerBullet
-MRUItem1=/Game/InGame/B_PlayerCharacter
+MRUItem0=/Game/InGame/B_Room
+MRUItem1=/Game/InGame/B_PlayerBullet
 MRUItem2=/Game/Levels/InGameScreen
-MRUItem3=/Game/InGame/MyPlayerController
-MRUItem4=/Game/InGameScreen
-MRUItem5=/Game/MyGameModeBase
-MRUItem6=/Game/StartScreen
-MRUItem7=/Game/MyPlayerController
+MRUItem3=/Game/GUI/MainMenu/MainMenu
+MRUItem4=/Game/InGame/B_PlayerCharacter
+MRUItem5=/Game/InGame/MyPlayerController
+MRUItem6=/Game/InGameScreen
+MRUItem7=/Game/MyGameModeBase
+MRUItem8=/Game/StartScreen
+MRUItem9=/Game/MyPlayerController
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1718,6 +1784,8 @@ GraphEditorQuickJumps=()
 /Game/InGame/B_PlayerCharacter.B_PlayerCharacter=1
 /Game/Levels/InGameScreen.InGameScreen:PersistentLevel.InGameScreen=1
 /Game/InGame/B_PlayerBullet.B_PlayerBullet=1
+/Game/GUI/MainMenu/MainMenu.MainMenu=1
+/Game/InGame/B_Room.B_Room=1
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1904,6 +1972,19 @@ WmfMediaSettings="\"Object\" "
 K2Node_InputAction="\"Object\" "
 CameraComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
+CanvasPanel="\"Object\" "
+PanelWidget="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+Button="\"Object\" "
+ContentWidget="\"Object\" "
+TextBlock="\"Object\" "
+TextLayoutWidget="\"Object\" "
+WrapBox="\"Object\" "
+BlockingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BrushComponent="\"Object\" "
 
 [DetailCategoriesAdvanced]
 B_PlayerCharacter_C.Replication=False
@@ -1911,6 +1992,8 @@ B_PlayerCharacter_C.Actor=False
 WorldSettings.PrecomputedVisibility=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/InGame/B_Room.B_Room;
+RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 
@@ -1942,4 +2025,79 @@ bDeleteSourceFilesWithAssets=False
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
