Completed Enemy Object
- Added an attack radius variable making the player stop when the reach it to commence attack
- Added Enemy projectile class which is created when the Attack radius is reached, it has a configurable delay
- Enemy Projectile class follows directional vector and is destroyed when it collides with player pawn
- Added Heath variable
- Added Enemy damage function which subtracts from the Health variable when it is called

--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -138,7 +138,9 @@ MRUItem3=/Game/StartScreen
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Enemey.Enemey
+OpenAssetsAtExit=/Game/PlayerPlaceHolder.PlayerPlaceHolder
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -186,7 +188,7 @@ SceneComponent.Variable=True
 LandscapeEditorObject.New Landscape=True
 Enemey_C.Tick=True
 Enemey_C.Replication=True
-Enemey_C.Rendering=True
+Enemey_C.Rendering=False
 Enemey_C.Collision=True
 Enemey_C.Actor=True
 Enemey_C.Input=True
@@ -512,7 +514,7 @@ PLaceHolder_C.Events=True
 PLaceHolder_C.TransformCommon=True
 PropertyWrapper.Events=True
 PlayerPlaceHolder_C.TransformCommon=True
-PlayerPlaceHolder_C.Pawn=True
+PlayerPlaceHolder_C.Pawn=False
 PlayerPlaceHolder_C.Camera=True
 PlayerPlaceHolder_C.Rendering=True
 PlayerPlaceHolder_C.Replication=True
@@ -843,6 +845,73 @@ PlayerController.Replication=True
 PlayerController.HLOD=True
 PlayerController.Input=True
 PlayerController.Actor=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+Enemy_Projectile_C.Tick=True
+Enemy_Projectile_C.Replication=True
+Enemy_Projectile_C.Rendering=True
+Enemy_Projectile_C.Collision=True
+Enemy_Projectile_C.Actor=True
+Enemy_Projectile_C.Input=True
+Enemy_Projectile_C.HLOD=True
+Enemy_Projectile_C.WorldPartition=True
+Enemy_Projectile_C.Events=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.Tags=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Variable=True
+ChildActorComponent.Cooking=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+Enemy_Projectile_C.Default=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.HLOD=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Thumbnail=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1957,15 +2026,16 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MainCAmera
-MRUItem1=/Game/C
-MRUItem2=/Game/PlayerPlaceHolder
-MRUItem3=/Game/Enemey
-MRUItem4=/Game/PLaceHolder
-MRUItem5=/Game/InGameScreen
-MRUItem6=/Game/MyGameModeBase
-MRUItem7=/Game/StartScreen
-MRUItem8=/Game/MyPlayerController
+MRUItem0=/Game/PlayerPlaceHolder
+MRUItem1=/Game/Enemy_Projectile
+MRUItem2=/Game/Enemey
+MRUItem3=/Game/MainCAmera
+MRUItem4=/Game/C
+MRUItem5=/Game/PLaceHolder
+MRUItem6=/Game/InGameScreen
+MRUItem7=/Game/MyGameModeBase
+MRUItem8=/Game/StartScreen
+MRUItem9=/Game/MyPlayerController
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2161,6 +2231,8 @@ InputSettings.Bindings=True
 PropertyWrapper.Variable=False
 SceneComponent.Rendering=False
 Enemey_C.Actor=False
+K2Node_VariableGet.Variable=True
+Blueprint.ClassOptions=False
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2208,4 +2280,8 @@ AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" \"Object.Automa
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+DeleteConfirmationVariable_Warning=False
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
