--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,22 +128,28 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/BasicRoom
-MRUItem2=/Game/Levels/MasterLevel
-MRUItem3=/Game/Levels/TestingPauseMenuLevel
-MRUItem4=/Game/Levels/TutorialRoom
-MRUItem5=/Game/Levels/OtherRoom
-MRUItem6=/Game/Levels/InGameScreen
-MRUItem7=/Game/InGame/InGame
-MRUItem8=/Game/InGameScreen
-MRUItem9=/Game/StartScreen
-MRUItem10=/Game/StarterContent/Maps/Minimal_Default
+MRUItem1=/Game/Levels/Room3
+MRUItem2=/Game/Levels/EndRoom
+MRUItem3=/Game/Levels/Room4
+MRUItem4=/Game/Levels/Room2
+MRUItem5=/Game/Levels/Room1
+MRUItem6=/Game/Levels/StartLevel
+MRUItem7=/Game/Levels/MasterLevel
+MRUItem8=/Game/Levels/BasicRoom
+MRUItem9=/Game/Levels/TestingPauseMenuLevel
+MRUItem10=/Game/Levels/TutorialRoom
+MRUItem11=/Game/Levels/OtherRoom
 
 [EditorStartup]
 LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/InGame/B_RoomStart.B_RoomStart
+OpenAssetsAtExit=/Game/InGame/B_RoomFinal.B_RoomFinal
+OpenAssetsAtExit=/Game/InGame/B_Room.B_Room
+OpenAssetsAtExit=/Game/InGame/Door.Door
+OpenAssetsAtExit=/Game/Enemey.Enemey
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -759,6 +765,35 @@ NewBlueprint_C.HLOD=True
 NewBlueprint_C.WorldPartition=True
 NewBlueprint_C.Events=True
 NewBlueprint_C.TransformCommon=True
+B_RoomFinal_C.Default=True
+B_RoomFinal_C.Tick=True
+B_RoomFinal_C.Replication=True
+B_RoomFinal_C.Rendering=True
+B_RoomFinal_C.Collision=True
+B_RoomFinal_C.Actor=True
+B_RoomFinal_C.Input=True
+B_RoomFinal_C.HLOD=True
+B_RoomFinal_C.WorldPartition=True
+B_RoomFinal_C.Events=True
+B_RoomStart_C.Default=True
+B_RoomStart_C.Tick=True
+B_RoomStart_C.Replication=True
+B_RoomStart_C.Rendering=True
+B_RoomStart_C.Collision=True
+B_RoomStart_C.Actor=True
+B_RoomStart_C.Input=True
+B_RoomStart_C.HLOD=True
+B_RoomStart_C.WorldPartition=True
+B_RoomStart_C.Events=True
+B_RoomStart_C.TransformCommon=True
+Wall_C.TransformCommon=True
+Wall_C.Rendering=True
+Wall_C.Replication=True
+Wall_C.Collision=True
+Wall_C.HLOD=True
+Wall_C.Input=True
+Wall_C.Actor=True
+B_RoomFinal_C.TransformCommon=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1781,7 +1816,7 @@ BlockingVolume=BlockingVolume.Collision.Collision,
 BrushComponent=BlockingVolume.Collision.Collision,
 SceneComponent=BlockingVolume.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,
-B_Room_C=BlockingVolume.Collision.Collision,
+B_Room_C=
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 PlayerStart=BlockingVolume.Collision.Collision,
 CapsuleComponent=BlockingVolume.Collision.Collision,
@@ -1798,6 +1833,9 @@ Actor=BlockingVolume.Collision.Collision,
 Brush=BlockingVolume.Collision.Collision,
 Enemey_C=BlockingVolume.Collision.Collision,
 NewBlueprint_C=BlockingVolume.Collision.Collision,
+B_RoomStart_C=BlockingVolume.Collision.Collision,
+Wall_C=BlockingVolume.Collision.Collision,
+B_RoomFinal_C=
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1857,26 +1895,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/BasicRoom
-MRUItem2=/Game/InGame/B_Room
-MRUItem3=/Game/Levels/MasterLevel
-MRUItem4=/Game/InGame/NewBlueprint
-MRUItem5=/Game/InGame/B_PlayerCharacter
-MRUItem6=/Game/GUI/MainMenu/PauseMenu
-MRUItem7=/Game/GUI/MainMenu/MainMenu
-MRUItem8=/Game/Enemey
-MRUItem9=/Game/Levels/TestingPauseMenuLevel
-MRUItem10=/Game/Levels/TutorialRoom
-MRUItem11=/Game/Levels/OtherRoom
-MRUItem12=/Game/Levels/InGameScreen
-MRUItem13=/Game/InGame/Door
-MRUItem14=/Game/InGame/B_PlayerBullet
-MRUItem15=/Game/InGame/MyPlayerController
-MRUItem16=/Game/InGameScreen
-MRUItem17=/Game/MyGameModeBase
-MRUItem18=/Game/StartScreen
-MRUItem19=/Game/MyPlayerController
+MRUItem0=/Game/Enemey
+MRUItem1=/Game/InGame/Door
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/Room3
+MRUItem4=/Game/Levels/EndRoom
+MRUItem5=/Game/Levels/Room4
+MRUItem6=/Game/Levels/Room2
+MRUItem7=/Game/Levels/Room1
+MRUItem8=/Game/Levels/StartLevel
+MRUItem9=/Game/InGame/B_Room
+MRUItem10=/Game/InGame/B_RoomStart
+MRUItem11=/Game/Levels/MasterLevel
+MRUItem12=/Game/InGame/B_RoomFinal
+MRUItem13=/Game/InGame/Enemey
+MRUItem14=/Game/Levels/BasicRoom
+MRUItem15=/Game/InGame/NewBlueprint
+MRUItem16=/Game/InGame/B_PlayerCharacter
+MRUItem17=/Game/GUI/MainMenu/PauseMenu
+MRUItem18=/Game/GUI/MainMenu/MainMenu
+MRUItem19=/Game/Levels/TestingPauseMenuLevel
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1936,6 +1974,9 @@ GraphEditorQuickJumps=()
 /Game/Enemey.Enemey=1
 /Game/GUI/MainMenu/PauseMenu.PauseMenu=1
 /Game/InGame/NewBlueprint.NewBlueprint=1
+/Game/InGame/Enemey.Enemey=1
+/Game/InGame/B_RoomStart.B_RoomStart=1
+/Game/InGame/B_RoomFinal.B_RoomFinal=1
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2152,11 +2193,12 @@ B_Room_C.Actor=False
 StaticMeshComponent.Collision=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/InGame/B_RoomStart.B_RoomStart;
+RecentlyPlaced=/Game/Enemey.Enemey;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/InGame/B_Room.B_Room;
 RecentlyPlaced=/Game/InGame/NewBlueprint.NewBlueprint;
-RecentlyPlaced=/Game/Enemey.Enemey;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/InGame/Door.Door;
 RecentlyPlaced=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter;
