--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,29 +127,24 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Levels/MasterLevel
-MRUItem1=/Game/Levels/BasicRoom
-MRUItem2=/Game/Levels/EndRoom
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Levels/LoseLevel
-MRUItem5=/Game/Levels/StartLevel
-MRUItem6=/Game/Levels/TestingPauseMenuLevel
-MRUItem7=/Game/Levels/TutorialRoom
-MRUItem8=/Game/Levels/OtherRoom
-MRUItem9=/Game/Levels/InGameScreen
-MRUItem10=/Game/InGame/InGame
-MRUItem11=/Game/InGameScreen
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/EndRoom
+MRUItem2=/Game/Levels/Room4
+MRUItem3=/Game/Levels/Room3
+MRUItem4=/Game/Levels/Room2
+MRUItem5=/Game/Levels/Room1
+MRUItem6=/Game/Levels/StartLevel
+MRUItem7=/Game/Levels/MasterLevel
+MRUItem8=/Game/Levels/BasicRoom
+MRUItem9=/Game/Levels/LoseLevel
+MRUItem10=/Game/Levels/TestingPauseMenuLevel
+MRUItem11=/Game/Levels/TutorialRoom
 
 [EditorStartup]
-LastLevel=/Game/Levels/MasterLevel
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/InGame/Enemey.Enemey
-OpenAssetsAtExit=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter
-OpenAssetsAtExit=/Game/InGame/Enemy_Projectile.Enemy_Projectile
-OpenAssetsAtExit=/Game/InGame/Wall.Wall
-OpenAssetsAtExit=/Game/InGame/B_PlayerBullet.B_PlayerBullet
+CleanShutdown=False
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -805,6 +800,35 @@ SceneComponent.Physics=True
 K2Node_VariableSet.Events=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+B_Room1_C.Default=True
+B_Room1_C.Tick=True
+B_Room1_C.Replication=True
+B_Room1_C.Rendering=True
+B_Room1_C.Collision=True
+B_Room1_C.Actor=True
+B_Room1_C.Input=True
+B_Room1_C.HLOD=True
+B_Room1_C.WorldPartition=True
+B_Room1_C.Events=True
+B_Room1_C.TransformCommon=True
+B_RoomFinal_C.TransformCommon=True
+B_RoomFinal_C.Default=True
+B_RoomFinal_C.Rendering=True
+B_RoomFinal_C.Replication=True
+B_RoomFinal_C.Collision=True
+B_RoomFinal_C.HLOD=True
+B_RoomFinal_C.Input=True
+B_RoomFinal_C.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1838,7 +1862,7 @@ K2Node_VariableSet=BlockingVolume.Collision.Collision,
 K2Node_VariableGet=BlockingVolume.Collision.Collision,
 EdGraph=BlockingVolume.Collision.Collision,
 K2Node_Variable=BlockingVolume.Collision.Collision,
-BillboardComponent=BlockingVolume.Collision.Collision,
+BillboardComponent=
 ChildActorComponent=BlockingVolume.Collision.Collision,
 Actor=BlockingVolume.Collision.Collision,
 Brush=BlockingVolume.Collision.Collision,
@@ -1846,6 +1870,7 @@ Enemey_C=BlockingVolume.Collision.Collision,
 NewBlueprint_C=BlockingVolume.Collision.Collision,
 Enemy_Projectile_C=BlockingVolume.Collision.Collision,
 Wall_C=BlockingVolume.Collision.Collision,
+B_Room1_C=BlockingVolume.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1905,26 +1930,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MasterLevel
-MRUItem1=/Game/Levels/BasicRoom
-MRUItem2=/Game/Levels/EndRoom
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Levels/LoseLevel
-MRUItem5=/Game/InGame/B_PlayerBullet
-MRUItem6=/Game/InGame/Wall
-MRUItem7=/Game/InGame/B_PlayerCharacter
-MRUItem8=/Game/InGame/Enemy_Projectile
-MRUItem9=/Game/Levels/StartLevel
-MRUItem10=/Game/InGame/Enemey
-MRUItem11=/Game/Enemey
-MRUItem12=/Game/InGame/B_Room
-MRUItem13=/Game/InGame/NewBlueprint
-MRUItem14=/Game/GUI/MainMenu/PauseMenu
-MRUItem15=/Game/GUI/MainMenu/MainMenu
-MRUItem16=/Game/Levels/TestingPauseMenuLevel
-MRUItem17=/Game/Levels/TutorialRoom
-MRUItem18=/Game/Levels/OtherRoom
-MRUItem19=/Game/Levels/InGameScreen
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/EndRoom
+MRUItem2=/Game/Levels/Room4
+MRUItem3=/Game/Levels/Room3
+MRUItem4=/Game/Levels/Room2
+MRUItem5=/Game/Levels/Room1
+MRUItem6=/Game/Levels/StartLevel
+MRUItem7=/Game/Levels/MasterLevel
+MRUItem8=/Game/GUI/MainMenu/MainMenu
+MRUItem9=/Game/InGame/B_Room1
+MRUItem10=/Game/GUI/MainMenu/WinScreen
+MRUItem11=/Game/GUI/MainMenu/LoseScreen
+MRUItem12=/Game/Levels/BasicRoom
+MRUItem13=/Game/Levels/LoseLevel
+MRUItem14=/Game/InGame/B_PlayerBullet
+MRUItem15=/Game/InGame/Wall
+MRUItem16=/Game/InGame/B_PlayerCharacter
+MRUItem17=/Game/InGame/Enemy_Projectile
+MRUItem18=/Game/InGame/Enemey
+MRUItem19=/Game/Enemey
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1987,6 +2012,9 @@ GraphEditorQuickJumps=()
 /Game/InGame/Enemey.Enemey=1
 /Game/InGame/Enemy_Projectile.Enemy_Projectile=1
 /Game/InGame/Wall.Wall=1
+/Game/GUI/MainMenu/LoseScreen.LoseScreen=1
+/Game/GUI/MainMenu/WinScreen.WinScreen=1
+/Game/InGame/B_Room1.B_Room1=1
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2195,6 +2223,7 @@ K2Node_InputKey="\"Object\" "
 PauseMenu_C="\"Object\" "
 BoxComponent="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
+Image="\"Object\" \"Object.Appearance.Brush\" "
 
 [DetailCategoriesAdvanced]
 B_PlayerCharacter_C.Replication=False
@@ -2208,6 +2237,7 @@ Wall_C.Collision=True
 SceneComponent.Physics=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/InGame/B_Room1.B_Room1;
 RecentlyPlaced=/Game/InGame/Enemey.Enemey;
 RecentlyPlaced=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -2323,7 +2353,7 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
